refactor: simplify code